2013-10-02  Eli Zaretskii  <eliz@gnu.org>

	Fix $abspath on Cygwin when HAVE_DOS_PATHS is in effect.
	* function.c (IS_ABSOLUTE) [__CYGWIN__]: Special definition for
	Cygwin.
	(abspath) [__CYGWIN__]: Reset root_len to 1 if the absolute file
	name has the Posix /foo/bar form.
	[HAVE_DOS_PATHS]: Use root_len instead of hard-coded 2.

2013-10-01  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.93.
	* NEWS: Ditto.

2013-09-30  Paul Smith  <psmith@gnu.org>

	* guile.c: Portability fixes for Guile 1.8.

2013-09-29  Paul Smith  <psmith@gnu.org>

	* output.c (output_dump): Always write Enter/Leave messages to stdio.
	(log_working_directory): This now always writes to stdio, so we
	don't need the struct output parameter anymore.
	(output_start): Show the working directory when output_sync is not
	set or is recursive.
	* main.c (main): Ensure the special "already shown Enter message"
	token is removed from MAKE_RESTARTS before the user can see it.
	* function.c (func_shell_base): If the output_context stderr
	exists but is invalid, write to the real stderr.
	Fixes suggested by Frank Heckenbach <f.heckenbach@fh-soft.de>.

	* output.c: Guard unistd.h inclusion, add io.h.
	* gnumake.h: Move GMK_EXPORT before the declarations.
	* make_msvc_net2003.vcproj: Add missing files.
	Changes for MSVC suggested by Gerte Hoogewerf <g.hoogewerf@gmail.com>

	* function.c (func_shell_base) [EMX]: Fix EMX support for output-sync.
	* job.c (child_execute_job) [EMX]: Ditto.
	* job.h (child_execute_job) [EMX]: Ditto.
	* w32/compat/posixfcn.c: Invert the test for NO_OUTPUT_SYNC.

	* guile.c (GSUBR_TYPE): Pre-2.0 Guile doesn't provide a typedef
	for gsubr pointers.  Create one.
	(guile_define_module): Use it.
	(internal_guile_eval): Force UTF-8 encoding for Guile strings.

	* main.c (main): Clear GNUMAKEFLAGS after parsing, to avoid
	proliferation of options.
	* NEWS: Document it.
	* doc/make.texi (Options/Recursion): Ditto.

2013-09-23  Eli Zaretskii  <eliz@gnu.org>
