@@ -1,5 +1,8 @@
 2013-10-02  Eli Zaretskii  <eliz@gnu.org>
 
+	* w32/compat/posixfcn.c (tmpfile): New function, a replacement for
+	the Windows libc version.
+
 	Fix $abspath on Cygwin when HAVE_DOS_PATHS is in effect.
 	* function.c (IS_ABSOLUTE) [__CYGWIN__]: Special definition for
 	Cygwin.
